bin/testsuite/tests/compiler/src/errors/compiler5034.swg
#global testerror "Err0569"

var x = 255's8
